* What is new in gsl-2.5:

** documention corrected to state that gsl_sf_legendre functions do
   not include Condon-Shortley phase by default

** bug fix in exponential fitting example when using larger number
   of points (reported by Anna Russo)

** changed internal workspace inside gsl_spmatrix to a union to
   avoid casting (suggested by Manuel Schmitz)

** bug fixes in ode-initval2 for very rare solver crashing cases:
   #52230 in msadams (reported by Michael Kaufman) and
   #52336 in msbdf (reported by Andrew Benson). As a fix,
   the maximum scaling of controlled step length was decreased
   from 5.0 to 4.9.

** add histogram2d figure to manual (was missing in 2.4)

** bug fix in gsl_spmatrix_add for duplicate input arguments
   (reported by Alfredo Correa)

** add support for negative arguments nu in gsl_sf_bessel_Jnu and
   gsl_sf_bessel_Ynu (Konrad Griessinger)

** better texinfo documentation for gsl_sf_hyperg functions

** fix vector and matrix fread/fwrite testing on windows systems
   when tmpfile() fails

** fix for rstat/test.c on PPC64 (reported by Adam Majer)

* What was new in gsl-2.4:

** migrated documentation to Sphinx software, which has built-in
   support for latex equations and figures in HTML output

** add const to declaration of appropriate gsl_rstat routines

** bug fix for #45730: change gsl_sf_sin/cos to libm sin/cos

** fix Cholesky documentation regarding upper triangle on output

** added routines to compute integrals with fixed-point quadrature,
   based on IQPACK (Konrad Griessinger)

** added routines for Hermite polynomials, gsl_sf_hermite_*
   (Konrad Griessinger)

** added new nonlinear least squares example for fitting
   a Gaussian to data

** deprecated routines:
     gsl_sf_coupling_6j_INCORRECT
     gsl_sf_coupling_6j_INCORRECT_e

** deprecated routine 'gsl_linalg_hessenberg' (replaced
   by gsl_linalg_hessenberg_decomp)

** removed routines which were deprecated in v2.1:
     gsl_bspline_deriv_alloc