@@ -27,191 +27,6 @@
 
 #include "linear_common.c"
 
-/* General weighted case */ 
-
-static int
-multifit_wlinear_svd (const gsl_matrix * X,
-                      const gsl_vector * w,
-                      const gsl_vector * y,
-                      double tol,
-                      int balance,
-                      size_t * rank,
-                      gsl_vector * c,
-                      gsl_matrix * cov,
-                      double *chisq, gsl_multifit_linear_workspace * work)
-{
-  if (X->size1 != y->size)
-    {
-      GSL_ERROR
-        ("number of observations in y does not match rows of matrix X",
-         GSL_EBADLEN);
-    }
-  else if (X->size2 != c->size)
-    {
-      GSL_ERROR ("number of parameters c does not match columns of matrix X",
-                 GSL_EBADLEN);
-    }
-  else if (w->size != y->size)
-    {
-      GSL_ERROR ("number of weights does not match number of observations",
-                 GSL_EBADLEN);
-    }
-  else if (cov->size1 != cov->size2)
-    {
-      GSL_ERROR ("covariance matrix is not square", GSL_ENOTSQR);
-    }
-  else if (c->size != cov->size1)
-    {
-      GSL_ERROR
-        ("number of parameters does not match size of covariance matrix",
-         GSL_EBADLEN);
-    }
-  else if (X->size1 != work->n || X->size2 != work->p)
-    {
-      GSL_ERROR
-        ("size of workspace does not match size of observation matrix",
-         GSL_EBADLEN);
-    }
-  else
-    {
-      const size_t n = X->size1;
-      const size_t p = X->size2;
-
-      size_t i, j, p_eff;
-
-      gsl_matrix *A = work->A;
-      gsl_matrix *Q = work->Q;
-      gsl_matrix *QSI = work->QSI;
-      gsl_vector *S = work->S;
-      gsl_vector *t = work->t;
-      gsl_vector *xt = work->xt;
-      gsl_vector *D = work->D;
-
-      /* Scale X,  A = sqrt(w) X */
-
-      gsl_matrix_memcpy (A, X);
-
-      for (i = 0; i < n; i++)
-        {
-          double wi = gsl_vector_get (w, i);
-
-          if (wi < 0)
-            wi = 0;
-
-          {
-            gsl_vector_view row = gsl_matrix_row (A, i);
-            gsl_vector_scale (&row.vector, sqrt (wi));
-          }
-        }
-
-      /* Balance the columns of the matrix A if requested */
-
-      if (balance) 
-        {
-          gsl_linalg_balance_columns (A, D);
-        }
-      else
-        {
-          gsl_vector_set_all (D, 1.0);
-        }
-
-      /* Decompose A into U S Q^T */
-
-      gsl_linalg_SV_decomp_mod (A, QSI, Q, S, xt);
-
-      /* Solve sqrt(w) y = A c for c, by first computing t = sqrt(w) y */
-
-      for (i = 0; i < n; i++)
-        {
-          double wi = gsl_vector_get (w, i);
-          double yi = gsl_vector_get (y, i);
-          if (wi < 0)
-            wi = 0;
-          gsl_vector_set (t, i, sqrt (wi) * yi);
-        }
-
-      gsl_blas_dgemv (CblasTrans, 1.0, A, t, 0.0, xt);
-
-      /* Scale the matrix Q,  Q' = Q S^-1 */
-
-      gsl_matrix_memcpy (QSI, Q);
-
-      {
-        double s0 = gsl_vector_get (S, 0);
-        p_eff = 0;
-        
-        for (j = 0; j < p; j++)
-          {
-            gsl_vector_view column = gsl_matrix_column (QSI, j);
-            double sj = gsl_vector_get (S, j);
-            double alpha;
-
-            if (sj <= tol * s0)
-              {
-                alpha = 0.0;
-              }
-            else
-              {
-                alpha = 1.0 / sj;
-                p_eff++;
-              }
-
-            gsl_vector_scale (&column.vector, alpha);
-          }
-
-        *rank = p_eff;
-      }
-
-      gsl_vector_set_zero (c);
-
-      /* solution */
-      gsl_blas_dgemv (CblasNoTrans, 1.0, QSI, xt, 0.0, c);
-
-      /* unscale the balancing factors */
-      gsl_vector_div (c, D);
-
-      /* compute chisq, from residual r = y - X c */
-      {
-        double r2 = 0;
-
-        for (i = 0; i < n; i++)
-          {
-            double yi = gsl_vector_get (y, i);
-            double wi = gsl_vector_get (w, i);
-            gsl_vector_const_view row = gsl_matrix_const_row (X, i);
-            double y_est, ri;
-            gsl_blas_ddot (&row.vector, c, &y_est);
-            ri = yi - y_est;
-            r2 += wi * ri * ri;
-          }
-
-        *chisq = r2;
-
-        /* Form covariance matrix cov = (X^T W X)^-1 = (Q S^-1) (Q S^-1)^T */
-
-        for (i = 0; i < p; i++)
-          {
-            gsl_vector_view row_i = gsl_matrix_row (QSI, i);
-            double d_i = gsl_vector_get (D, i);
-
-            for (j = i; j < p; j++)
-              {
-                gsl_vector_view row_j = gsl_matrix_row (QSI, j);
-                double d_j = gsl_vector_get (D, j);
-                double s;
-
-                gsl_blas_ddot (&row_i.vector, &row_j.vector, &s);
-
-                gsl_matrix_set (cov, i, j, s / (d_i * d_j));
-                gsl_matrix_set (cov, j, i, s / (d_i * d_j));
-              }
-          }
-      }
-
-      return GSL_SUCCESS;
-    }
-}
-
 int
 gsl_multifit_wlinear (const gsl_matrix * X,
                       const gsl_vector * w,
@@ -323,10 +138,8 @@ gsl_multifit_wlinear_svd (const gsl_matrix * X,
                           gsl_matrix * cov,
                           double *chisq, gsl_multifit_linear_workspace * work)
 {
-  int status  = multifit_wlinear_svd (X, w, y, tol, 1, rank, c,
-                                      cov, chisq, work);
+  int status = gsl_multifit_wlinear_tsvd(X, w, y, tol, c, cov, chisq, rank, work);
   return status;
-
 }
 
 int
@@ -339,8 +152,7 @@ gsl_multifit_wlinear_usvd (const gsl_matrix * X,
                            gsl_matrix * cov,
                            double *chisq, gsl_multifit_linear_workspace * work)
 {
-  int status  = multifit_wlinear_svd (X, w, y, tol, 0, rank, c,
-                                      cov, chisq, work);
+  /* FIXME: this call does actually perform balancing, but this function is deprecated anyway */
+  int status = gsl_multifit_wlinear_tsvd(X, w, y, tol, c, cov, chisq, rank, work);
   return status;
-
 }
