@@ -1,5 +1,8 @@
 * What is new in gsl-2.5:
 
+** bug fix in deprecated functions gsl_multifit_wlinear_svd and
+   gsl_multifit_wlinear_usvd (reported by Vlad Koli)
+
 ** documention corrected to state that gsl_sf_legendre functions do
    not include Condon-Shortley phase by default
 
